# wasm-faas

./: .gitmodules
binaries/: opt.sh
binaries/assemblyscript/: package-lock.json  package.json
binaries/assemblyscript/hello-world/: package.json
binaries/compiled/: div.wasm  import.wasm  sum.wasm
binaries/emscripten/: README.md  build_all.sh  build_sum.sh  initialize.sh
binaries/emscripten/compiled/: import.wasm
binaries/emscripten/cpp/div/: div.c
binaries/emscripten/cpp/import/: import.c
binaries/emscripten/cpp/regex/: regex-is-match.c  regex-is-match.h  regex-is-match.wit  regex.cpp  regex.wasm
binaries/emscripten/cpp/sum/: a.out.js  sum.c
binaries/rust/: Cargo.toml  opt.sh
runtime/: Cargo.toml  release.sh
runtime/compat/: libwasmfaas.h  test  test.cpp
runtime/src/: kernel_store.rs  lib.rs  module_store.rs  sim_compat.rs
runtime/src/routes/: execute_function.rs  mod.rs  register_function.rs
runtime/src/runtime/: execute_module.rs  mod.rs
runtime/src/server/routes/: execute_function.rs  mod.rs  register_function.rs  register_node.rs
runtime/tests/: runtime.rs
runtime/tests/data/: import_request.json  sum_request.json
