[package]
name = "wasmfaas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmer = "2"    
wasmer-wasi = "2.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
anyhow = "1"
base64 = "0.13.0"
parking_lot = "*"
axum = "0.4.8"
tokio = { version = "1", features = ["full"] }
chrono = {version = "0.4", features = ["serde"]}
reqwest = {version = "0.11.10", features = ["rustls-tls", "json"]}
once_cell = "1"
rand = "0.8"
crossbeam = "0.8"

[lib]
crate-type = ["rlib", "cdylib"]